contrast issues

--- a/lesson6/css/large.css
+++ b/lesson6/css/large.css
@@ -24,8 +24,8 @@
     flex-direction: column;
     width: 165px;
     height: 150px;
-    border:solid #706c61;
-    border-width: thin;
+    border:1px solid black;
+   
 }
  .day {
     color: white;
@@ -45,7 +45,7 @@
     font-family: 'Shadows Into Light', cursive;
     font-weight: bold;
     text-align: center;
-    color: #333333;
+    color: black;
 
 }
 .forecastcontainer{
